# strategy-pattern

./: CMakeLists.txt  README.md  main.cpp
include/: Duck.h  FlyBehaviour.h  FlyNoWay.h  FlyRocketPowered.h  FlyWithWings.h  MallardDuck.h  ModelDuck.h  MuteQuack.h  Quack.h  QuackBehaviour.h  Squeack.h
src/: Duck.cpp  FlyNoWay.cpp  FlyRocketPowered.cpp  FlyWithWings.cpp  MallardDuck.cpp  ModelDuck.cpp  MuteQuack.cpp  Quack.cpp  Squeak.cpp
